--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "transformers",
     "tokenizers",
     "torch>=2.10.0",
+    "einops>=0.8.2",
 ]
 
 [project.optional-dependencies]
